Mediawiki theme: Fix focus inset to overlap scrollbars
Fix focus inset on TextinputWidget's textareas by applying `outline` and
`outline-offset`. As IE/Edge are the only browser which don't support this
property, let's hack them out of our way.

Bug: T103851

--- a/src/themes/mediawiki/widgets.less
+++ b/src/themes/mediawiki/widgets.less
@@ -767,6 +767,17 @@
 			}
 		}
 
+		// HACK: Exclude IE/Edge (and Saf<6) from this selector as it
+		// doesn't understand `outline-offset`. All other browsers do. :/
+		@media screen {
+			@media ( min-width: 0 ) {
+				textarea:focus {
+					outline: 1px solid @color-progressive;
+					outline-offset: -2px;
+				}
+			}
+		}
+
 		.mw-placeholder();
 
 		&.oo-ui-flaggedElement-invalid {
